New beatmaps API resource for beatmap objects and beatmap files
